# rmuc21_ignition_simulator

./: CMakeLists.txt  README.md  package.xml
launch/: rmuc21_power_rune_launch.py  rmuc21_world.launch.py  standard_robot1v1.launch.py  standardbot2_test.launch.py
models/rmuc21_battlefield/: model.sdf  model.sdf.xacro
models/rmuc21_competition_area/: model.config
models/rmuc21_ground/: model.config  model.sdf  model.sdf.xacro
models/rmuc21_ground/meshes/: right_elevated_ground.dae  right_elevated_ground_wall.dae
models/rmuc21_landing_pad/: model.config  model.sdf  model.sdf.xacro
models/rmuc21_resource_island/: model.config  model.sdf  model.sdf.xacro
models/rmuc21_resource_island/meshes/: resource_island_base.dae  resource_island_holder.dae
models/rmuc21_sentry_rail/: model.sdf  model.sdf.xacro
models/rmuc21_sentry_rail/meshes/: sentry_rail.dae
models/rmuc21_supplier/: model.config  model.sdf  model.sdf.xacro
models/rmuc21_supplier/meshes/: supplier.dae
resource/models/rmuc21_battlefield/: model.config  model.sdf  model.sdf.xmacro
resource/models/rmuc21_ground/: model.sdf  model.sdf.xmacro
resource/models/rmuc21_landing_pad/: model.sdf  model.sdf.xmacro  rmuc21_landing_pad.def.xmacro
resource/models/rmuc21_power_rune/: model.config  model.sdf  model.sdf.xmacro  rmuc21_power_rune.def.xmacro
resource/models/rmuc21_projectile_supplier/: model.config  model.sdf  model.sdf.xmacro  rmuc21_projectile_supplier.def.xmacro
resource/worlds/: rmuc21_1v1_world.sdf  rmuc21_power_rune_world.sdf
worlds/: rmuc21_1v1_world.sdf  rmuc21_empty_world.sdf
(+16 files in other folders)
